--- a/Profolio.html
+++ b/Profolio.html
@@ -3,20 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chhum Sokheng | Portfolio</title>
+  <title>Chhum Sokheng|Portfolio</title>
   
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Portfolio of Chhum Sokheng, showcasing web development projects, skills, and contact information.">
-  <meta name="keywords" content="Portfolio, Web Development, HTML, CSS, JavaScript, Projects">
+  <!-- Meta Tags -->
+  <meta name="description" content="Portfolio of Chhum Sokheng, and contact information.">
+  <meta name="keywords" content="Portfolio, Web Development, HTML, CSS,">
   <meta name="author" content="Chhum Sokheng">
 
-  <!-- Open Graph (for social media preview) -->
-  <meta property="og:title" content="Chhum Sokheng | Portfolio">
-  <meta property="og:description" content="Explore my portfolio showcasing web projects, skills, and achievements.">
-  <meta property="og:image" content="https://example.com/preview.jpg">
-  <meta property="og:url" content="https://example.com">
-  <meta property="og:type" content="website">
-
+  <!-- Styles -->
   <style>
     body {
       margin: 0;
